--- a/services.html
+++ b/services.html
@@ -458,7 +458,7 @@
     <a href="#" class="btn snipcart-checkout">View Cart</a>
   </div>
   <script async src="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.js"></script>
-  <div hidden id="snipcart" data-api-key="YOUR_PUBLIC_API_KEY"></div>
+  <div hidden id="snipcart" data-api-key="ZDA4ZjAzN2MtNGJkMS00NThjLWI0NjQtYzU2MWM0MGYxMjNjNjM4ODc3Njk2MjU1Mzg3MzU1"></div>
 
   <script>
     // IntersectionObserver to animate catalog items into view
