--- a/services.html
+++ b/services.html
@@ -310,21 +310,36 @@
           </div>
         </article>
 
-        <!-- Malware Analysis & IR -->
-        <article class="card reveal" aria-labelledby="ma-title">
-          <div class="icon" aria-hidden="true">MA</div>
-          <h3 id="ma-title">Malware Analysis & Incident Response Advisory</h3>
-          <p>Static and dynamic analysis, rapid triage and advisory support to contain and remediate compromises while preserving evidence and improving resilience.</p>
-          <ul>
-            <li>Sandboxing & behavioral reports</li>
-            <li>Containment and remediation guidance</li>
-            <li>Post-incident lessons-learned & hardening</li>
-          </ul>
-          <div class="meta">
-            <span style="margin-right:10px;color:var(--muted)">Rapid-response retainers available</span>
-            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Incident Response Inquiry">Request Support</a>
-          </div>
-        </article>
+       <!-- Malware Analysis & IR -->
+<article class="card reveal" aria-labelledby="ma-title">
+  <div class="icon" aria-hidden="true">MA</div>
+  <h3 id="ma-title">Malware Analysis & Incident Response Advisory</h3>
+  <p>Static and dynamic analysis, rapid triage and advisory support to contain and remediate compromises while preserving evidence and improving resilience.</p>
+  <ul>
+    <li>Sandboxing & behavioral reports</li>
+    <li>Containment and remediation guidance</li>
+    <li>Post-incident lessons-learned & hardening</li>
+  </ul>
+  <div class="meta">
+    <span style="margin-right:10px;color:var(--muted)">Rapid-response retainers available</span>
+
+    <!-- Snipcart Subscription Button -->
+    <button 
+      class="btn snipcart-add-item"
+      data-item-id="malware-ir-subscription"
+      data-item-name="Malware Analysis & IR Retainer"
+      data-item-price="250.00"
+      data-item-url="/"
+      data-item-description="Monthly cybersecurity incident response advisory and triage support plan."
+      data-item-payment-interval="Month"
+      data-item-payment-interval-count="1"
+      data-item-shippable="false"
+    >
+      Subscribe – $250/month
+    </button>
+  </div>
+</article>
+
 
         <!-- Threat Feeds -->
         <article class="card reveal" aria-labelledby="tf-title">
