--- a/services.html
+++ b/services.html
@@ -311,6 +311,7 @@
         </article>
 
        <!-- Malware Analysis & IR -->
+<!-- Malware Analysis & IR -->
 <article class="card reveal" aria-labelledby="ma-title">
   <div class="icon" aria-hidden="true">MA</div>
   <h3 id="ma-title">Malware Analysis & Incident Response Advisory</h3>
@@ -323,39 +324,79 @@
   <div class="meta">
     <span style="margin-right:10px;color:var(--muted)">Rapid-response retainers available</span>
 
-    <!-- Snipcart Subscription Button -->
-    <button 
-      class="btn snipcart-add-item"
-      data-item-id="malware-ir-subscription"
-      data-item-name="Malware Analysis & IR Retainer"
-      data-item-price="250.00"
-      data-item-url="/"
-      data-item-description="Monthly cybersecurity incident response advisory and triage support plan."
-      data-item-payment-interval="Month"
-      data-item-payment-interval-count="1"
-      data-item-shippable="false"
+    <button class="btn snipcart-add-item"
+        data-item-id="malware-ir-retainer"
+        data-item-name="Malware Analysis & IR Retainer"
+        data-item-url="https://thqcyberdivision.github.io/services.html"
+        data-item-description="Incident Response Retainer Subscription"
+        data-item-selected-plan="weekly-plan"
+
+        data-plan1-id="weekly-plan"
+        data-plan1-name="Weekly Retainer"
+        data-plan1-frequency="month"
+        data-plan1-interval="1"
+        data-plan1-count="1"
+        data-item-plan1-price="250"
+
+        data-plan2-id="biweekly-plan"
+        data-plan2-name="Biweekly Retainer"
+        data-plan2-frequency="month"
+        data-plan2-interval="2"
+        data-plan2-count="1"
+        data-item-plan2-price="450"
     >
-      Subscribe – $250/month
+      Subscribe
     </button>
   </div>
 </article>
 
 
-        <!-- Threat Feeds -->
-        <article class="card reveal" aria-labelledby="tf-title">
-          <div class="icon" aria-hidden="true">TF</div>
-          <h3 id="tf-title">Threat Feeds & Alerts</h3>
-          <p>Machine-readable, production-ready feeds and webhook alerts for automated defenses. Delivered in formats compatible with common SIEM and SOAR platforms.</p>
-          <ul>
-            <li>STIX, CSV, JSON outputs</li>
-            <li>Tiered subscriptions (alerts, enriched context, raw data)</li>
-            <li>Integration & onboarding support</li>
-          </ul>
-          <div class="meta">
-            <span class="badge" style="background:#fff6e6;color:#b56d00">From €49/mo</span>
-            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Threat Feed Subscription">Subscribe</a>
-          </div>
-        </article>
+<!-- Threat Feeds -->
+<article class="card reveal" aria-labelledby="tf-title">
+  <div class="icon" aria-hidden="true">TF</div>
+  <h3 id="tf-title">Threat Feeds & Alerts</h3>
+  <p>Machine-readable, production-ready feeds and webhook alerts for automated defenses. Delivered in formats compatible with common SIEM and SOAR platforms.</p>
+  <ul>
+    <li>STIX, CSV, JSON outputs</li>
+    <li>Tiered subscriptions (alerts, enriched context, raw data)</li>
+    <li>Integration & onboarding support</li>
+  </ul>
+  <div class="meta">
+    <span class="badge" style="background:#fff6e6;color:#b56d00">From €49/mo</span>
+
+    <button class="btn snipcart-add-item"
+        data-item-id="threat-feeds"
+        data-item-name="Threat Feeds & Alerts Subscription"
+        data-item-url="https://thqcyberdivision.github.io/services.html"
+        data-item-description="Tiered threat feed subscription with automated updates"
+        data-item-selected-plan="alerts-plan"
+
+        data-plan1-id="alerts-plan"
+        data-plan1-name="Alerts Only"
+        data-plan1-frequency="month"
+        data-plan1-interval="1"
+        data-plan1-count="1"
+        data-item-plan1-price="49"
+
+        data-plan2-id="enriched-plan"
+        data-plan2-name="Enriched Context"
+        data-plan2-frequency="month"
+        data-plan2-interval="1"
+        data-plan2-count="1"
+        data-item-plan2-price="79"
+
+        data-plan3-id="raw-plan"
+        data-plan3-name="Raw Data + Alerts"
+        data-plan3-frequency="month"
+        data-plan3-interval="1"
+        data-plan3-count="1"
+        data-item-plan3-price="129"
+    >
+      Subscribe
+    </button>
+
+  </div>
+</article>
 
         <!-- Dedicated Hosts (replaces Secure VPS Rentals) -->
         <article class="card reveal" aria-labelledby="dh-title">
