Change Snipcart load strategy to immediate

--- a/services.html
+++ b/services.html
@@ -236,7 +236,7 @@
 	  <script>
     window.SnipcartSettings = {
         publicApiKey: 'ZDA4ZjAzN2MtNGJkMS00NThjLWI0NjQtYzU2MWM0MGYxMjNjNjM4ODc3Njk2MjU1Mzg3MzU1',
-        loadStrategy: 'on-user-interaction',
+        loadStrategy: 'immediate',
 		modalStyle: "side",
     };
 
