--- a/services.html
+++ b/services.html
@@ -310,84 +310,70 @@
           </div>
         </article>
 
-<button class="btn snipcart-add-item"
-    data-item-id="malware-ir-retainer"
-    data-item-name="Malware Analysis & IR Retainer"
-    data-item-url="https://thqcyberdivision.github.io/services.html"
-    data-item-description="Incident Response Retainer Subscription"
-    data-item-selected-plan="weekly-plan"
+<!-- Malware Analysis & IR Retainer -->
+<article class="card reveal" aria-labelledby="ir-title">
+  <div class="icon pulse" aria-hidden="true">IR</div>
+  <h3 id="ir-title">Malware Analysis & IR Retainer</h3>
+  <p>Incident Response retainer subscription for proactive malware analysis and rapid threat response.</p>
+  <ul>
+    <li>Weekly or Biweekly retainer options</li>
+    <li>Priority incident handling</li>
+    <li>Dedicated support for your team</li>
+  </ul>
+  <div class="meta">
+    <button class="btn snipcart-add-item"
+        data-item-id="malware-ir-retainer"
+        data-item-name="Malware Analysis & IR Retainer"
+        data-item-url="https://thqcyberdivision.github.io/services.html"
+        data-item-description="Incident Response Retainer Subscription"
+        data-item-selected-plan="weekly-plan"
 
-    data-plan1-id="weekly-plan"
-    data-plan1-name="Weekly Retainer"
-    data-plan1-frequency="month"
-    data-plan1-interval="1"
-    data-plan1-count="1"
-    data-item-plan1-price="250"
+        data-plan1-id="weekly-plan"
+        data-plan1-name="Weekly Retainer"
+        data-plan1-frequency="month"
+        data-plan1-interval="1"
+        data-plan1-count="1"
+        data-item-plan1-price="250"
 
-    data-plan2-id="biweekly-plan"
-    data-plan2-name="Biweekly Retainer"
-    data-plan2-frequency="month"
-    data-plan2-interval="2"
-    data-plan2-count="1"
-    data-item-plan2-price="450"
->
-    Subscribe
-</button>
+        data-plan2-id="biweekly-plan"
+        data-plan2-name="Biweekly Retainer"
+        data-plan2-frequency="month"
+        data-plan2-interval="2"
+        data-plan2-count="1"
+        data-item-plan2-price="450">
+      Subscribe
+    </button>
+  </div>
+</article>
 
-<script>
-document.querySelectorAll('.snipcart-add-item').forEach(btn => {
-    btn.addEventListener('click', function(e){
-        if(!window.Snipcart || !window.Snipcart.ready){
-            e.preventDefault();
-            document.addEventListener('snipcart.ready', () => btn.click(), {once:true});
-        }
-    });
-});
-</script>
+<!-- Threat Feeds & Alerts -->
+<article class="card reveal" aria-labelledby="tf-title">
+  <div class="icon" aria-hidden="true">TF</div>
+  <h3 id="tf-title">Threat Feeds & Alerts Subscription</h3>
+  <p>Tiered subscription for automated threat feeds and enriched context updates.</p>
+  <ul>
+    <li>Alerts Only, Enriched Context, or Raw Data + Alerts</li>
+    <li>Customizable subscription tiers</li>
+    <li>Automatic delivery to your systems</li>
+  </ul>
+  <div class="meta">
+    <button class="btn snipcart-add-item"
+        data-item-id="threat-feeds"
+        data-item-name="Threat Feeds & Alerts Subscription"
+        data-item-url="https://thqcyberdivision.github.io/services.html"
+        data-item-description="Tiered threat feed subscription with automated updates"
+        data-item-selected-plan="alerts-plan"
 
+        data-plan1-id="alerts-plan"
+        data-plan1-name="Alerts Only"
+        data-plan1-frequency="month"
+        data-plan1-interval="1"
+        data-plan1-count="1"
+        data-item-plan1-price="49"
 
+        data-plan2-id="enriched-plan"
+        data-
 
-<button class="btn snipcart-add-item"
-    data-item-id="threat-feeds"
-    data-item-name="Threat Feeds & Alerts Subscription"
-    data-item-url="https://thqcyberdivision.github.io/services.html"
-    data-item-description="Tiered threat feed subscription with automated updates"
-    data-item-selected-plan="alerts-plan"
-
-    data-plan1-id="alerts-plan"
-    data-plan1-name="Alerts Only"
-    data-plan1-frequency="month"
-    data-plan1-interval="1"
-    data-plan1-count="1"
-    data-item-plan1-price="49"
-
-    data-plan2-id="enriched-plan"
-    data-plan2-name="Enriched Context"
-    data-plan2-frequency="month"
-    data-plan2-interval="1"
-    data-plan2-count="1"
-    data-item-plan2-price="79"
-
-    data-plan3-id="raw-plan"
-    data-plan3-name="Raw Data + Alerts"
-    data-plan3-frequency="month"
-    data-plan3-interval="1"
-    data-plan3-count="1"
-    data-item-plan3-price="129"
->
-    Subscribe
-</button>
-
-<script>
-document.querySelectorAll('.snipcart-add-item').forEach(btn => {
-    btn.addEventListener('click', function(e){
-        if(!window.Snipcart || !window.Snipcart.ready){
-            e.preventDefault();
-            document.addEventListener('snipcart.ready', () => btn.click(), {once:true});
-        }
-    });
-});
-</script>
 
         <!-- Dedicated Hosts (replaces Secure VPS Rentals) -->
         <article class="card reveal" aria-labelledby="dh-title">
