Add data attributes for new subscription plans

--- a/services.html
+++ b/services.html
@@ -372,7 +372,22 @@
         data-item-plan1-price="49"
 
         data-plan2-id="enriched-plan"
-        data-
+        data-plan2-name="Enriched Context"
+        data-plan2-frequency="month"
+        data-plan2-interval="1"
+        data-plan2-count="1"
+        data-item-plan2-price="99"
+
+        data-plan3-id="raw-plan"
+        data-plan3-name="Raw + Alerts"
+        data-plan3-frequency="month"
+        data-plan3-interval="1"
+        data-plan3-count="1"
+        data-item-plan3-price="149">
+      Subscribe
+    </button>
+  </div>
+</article>
 
 
         <!-- Dedicated Hosts (replaces Secure VPS Rentals) -->
