--- a/services.html
+++ b/services.html
@@ -326,6 +326,8 @@
         data-item-name="Malware Analysis & IR Retainer"
         data-item-url="https://thqcyberdivision.github.io/services.html"
         data-item-description="Incident Response Retainer Subscription"
+        data-item-subscription="true"
+        data-item-price="250"
         data-item-selected-plan="weekly-plan"
 
         data-plan1-id="weekly-plan"
@@ -346,7 +348,8 @@
   </div>
 </article>
 
-<!-- Threat Feeds & Alerts -->
+
+<!-- Threat Feeds & Alerts Subscription -->
 <article class="card reveal" aria-labelledby="tf-title">
   <div class="icon" aria-hidden="true">TF</div>
   <h3 id="tf-title">Threat Feeds & Alerts Subscription</h3>
@@ -362,6 +365,8 @@
         data-item-name="Threat Feeds & Alerts Subscription"
         data-item-url="https://thqcyberdivision.github.io/services.html"
         data-item-description="Tiered threat feed subscription with automated updates"
+        data-item-subscription="true"
+        data-item-price="49"
         data-item-selected-plan="alerts-plan"
 
         data-plan1-id="alerts-plan"
@@ -388,6 +393,7 @@
     </button>
   </div>
 </article>
+
 
 
         <!-- Dedicated Hosts (replaces Secure VPS Rentals) -->
