Add button for painting lessons with pricing options
Added a button to add painting lessons to the cart with pricing plans.

--- a/services.html
+++ b/services.html
@@ -294,6 +294,30 @@
           </div>
         </article>
 
+		  <button class="snipcart-add-item"
+    data-item-id="painting_lessons"
+    data-item-name="1h painting class"
+    data-item-url="/painting_lessons"
+    data-item-description="Painting lessons - 1h"
+    data-item-selected-plan="weekly-plan"
+
+    data-plan1-id="weekly-plan"
+    data-plan1-name="1h / week for 1 session"
+    data-plan1-frequency="weekly"
+    data-plan1-interval="1"
+    data-plan1-count="10"
+    data-item-plan1-price="20"
+
+    data-plan2-id="biweekly-plan"
+    data-plan2-name="1h / 2 weeks for 1 session"
+    data-plan2-frequency="weekly"
+    data-plan2-interval="2"
+    data-plan2-count="5"
+    data-item-plan2-price="25"
+    >
+    Add to cart
+</button>
+
         <!-- Tactical & Operational -->
         <article class="card reveal" aria-labelledby="to-title">
           <div class="icon" aria-hidden="true">OP</div>
