Update item URL for painting lessons button

--- a/services.html
+++ b/services.html
@@ -297,7 +297,7 @@
 		  <button class="snipcart-add-item"
     data-item-id="painting_lessons"
     data-item-name="1h painting class"
-    data-item-url="/painting_lessons"
+    data-item-url="/services.html#"
     data-item-description="Painting lessons - 1h"
     data-item-selected-plan="weekly-plan"
 
