Remove subscription buttons from services page
Removed multiple subscription buttons for services.

--- a/services.html
+++ b/services.html
@@ -253,6 +253,7 @@
   <header>
     <a href="index.html"><img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo" /></a>
     <h1>THQ Cyber Division — Services</h1>
+	   <button class="snipcart-customer-signin">My account</button>
   </header>
 
   <nav>
@@ -294,29 +295,7 @@
           </div>
         </article>
 
-		  <button class="snipcart-add-item"
-    data-item-id="painting_lessons"
-    data-item-name="1h painting class"
-    data-item-url="/services.html#"
-    data-item-description="Painting lessons - 1h"
-    data-item-selected-plan="weekly-plan"
 
-    data-plan1-id="weekly-plan"
-    data-plan1-name="1h / week for 1 session"
-    data-plan1-frequency="weekly"
-    data-plan1-interval="1"
-    data-plan1-count="10"
-    data-item-plan1-price="20"
-
-    data-plan2-id="biweekly-plan"
-    data-plan2-name="1h / 2 weeks for 1 session"
-    data-plan2-frequency="weekly"
-    data-plan2-interval="2"
-    data-plan2-count="5"
-    data-item-plan2-price="25"
-    >
-    Add to cart
-</button>
 
         <!-- Tactical & Operational -->
         <article class="card reveal" aria-labelledby="to-title">
@@ -333,64 +312,6 @@
             <a class="btn" href="mailto:thqcs@protonmail.com?subject=Operational Intelligence Inquiry">Engage Now</a>
           </div>
         </article>
-
-<button class="btn snipcart-add-item"
-    data-item-id="malware-ir-retainer"
-    data-item-name="Malware Analysis & IR Retainer"
-    data-item-url="https://thqcyberdivision.github.io/services.html"
-    data-item-description="Incident Response Retainer Subscription"
-    data-item-subscription="true"
-    data-item-selected-plan="weekly-plan"
-
-    data-plan1-id="weekly-plan"
-    data-plan1-name="Weekly Retainer"
-    data-plan1-frequency="month"
-    data-plan1-interval="1"
-    data-plan1-count="1"
-    data-plan1-price="250"
-
-    data-plan2-id="biweekly-plan"
-    data-plan2-name="Biweekly Retainer"
-    data-plan2-frequency="month"
-    data-plan2-interval="2"
-    data-plan2-count="1"
-    data-plan2-price="450">
-  Subscribe
-</button>
-
-
-
-
-<button class="btn snipcart-add-item"
-    data-item-id="threat-feeds"
-    data-item-name="Threat Feeds & Alerts Subscription"
-    data-item-url="https://thqcyberdivision.github.io/services.html"
-    data-item-description="Tiered threat feed subscription with automated updates"
-    data-item-subscription="true"
-    data-item-selected-plan="alerts-plan"
-
-    data-plan1-id="alerts-plan"
-    data-plan1-name="Alerts Only"
-    data-plan1-frequency="month"
-    data-plan1-interval="1"
-    data-plan1-count="1"
-    data-plan1-price="49"
-
-    data-plan2-id="enriched-plan"
-    data-plan2-name="Enriched Context"
-    data-plan2-frequency="month"
-    data-plan2-interval="1"
-    data-plan2-count="1"
-    data-plan2-price="99"
-
-    data-plan3-id="raw-plan"
-    data-plan3-name="Raw + Alerts"
-    data-plan3-frequency="month"
-    data-plan3-interval="1"
-    data-plan3-count="1"
-    data-plan3-price="149">
-  Subscribe
-</button>
 
 
 
