--- a/services.html
+++ b/services.html
@@ -279,86 +279,50 @@
     <section class="panel" style="margin-top:18px;">
       <div class="catalog">
 
-        <!-- Strategic Threat Intelligence -->
-        <article class="card reveal" aria-labelledby="si-title">
-          <div class="icon pulse" aria-hidden="true">TI</div>
-          <h3 id="si-title">Strategic Threat Intelligence</h3>
-          <p>Quarterly and ad-hoc intelligence reports that summarize adversary motives, capabilities and long-term trends that impact your sector and operations.</p>
-          <ul>
-            <li>Actor profiling & campaign timelines</li>
-            <li>Sector-specific risk assessments</li>
-            <li>Executive summaries and briefings</li>
-          </ul>
-          <div class="meta">
-            <span style="margin-right:10px;color:var(--muted)">Packages & custom engagements</span>
-            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Strategic Intelligence Inquiry">Request Report</a>
-          </div>
-        </article>
-
-
-
-        <!-- Tactical & Operational -->
-        <article class="card reveal" aria-labelledby="to-title">
-          <div class="icon" aria-hidden="true">OP</div>
-          <h3 id="to-title">Tactical & Operational Intelligence</h3>
-          <p>Operational deliverables for detection, hunting and rapid disruption of active campaigns. IOCs, enriched context, and playbooks formatted for SIEM/SOAR ingestion.</p>
-          <ul>
-            <li>IOC packs (STIX/YARA/Sigma) and enrichment</li>
-            <li>Threat hunting engagements & workshops</li>
-            <li>Operational playbooks & incident packages</li>
-          </ul>
-          <div class="meta">
-            <span style="margin-right:10px;color:var(--muted)">Per-engagement pricing</span>
-            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Operational Intelligence Inquiry">Engage Now</a>
-          </div>
-        </article>
-
-
-
-
         <!-- Dedicated Hosts (replaces Secure VPS Rentals) -->
         <article class="card reveal" aria-labelledby="dh-title">
-          <div class="icon" aria-hidden="true">DH</div>
-          <h3 id="dh-title">Dedicated Hosts</h3>
-          <p>Single-tenant physical or reserved hosts for customers who need isolated hardware and predictable performance for security tooling and research.</p>
-          <ul>
-            <li>Small Host — 4 vCPU / 16GB RAM / 500GB NVMe — €149/mo</li>
-            <li>Medium Host — 8 vCPU / 32GB RAM / 1TB NVMe — €279/mo</li>
-            <li>Large Host — 16 vCPU / 64GB RAM / 2TB NVMe — €539/mo</li>
-          </ul>
-          <div class="meta">
-            <span style="margin-right:10px;color:var(--muted)">Monthly and term contracts available</span>
-            <!-- Snipcart add-to-cart examples: replace data-api-key in the snipcart div below with your public key -->
-            <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px;">
-              <a class="btn snipcart-add-item" href="#"
-                 data-item-id="dh-small"
-                 data-item-name="Dedicated Host - Small"
-                 data-item-price="149.00"
-                 data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="Small single-tenant host, 4 vCPU, 16GB RAM, 500GB NVMe">
-                Rent Small Host
-              </a>
+  <div class="icon" aria-hidden="true">DH</div>
+  <h3 id="dh-title">Dedicated Hosts</h3>
+  <p>Single-tenant physical or reserved hosts for customers who need isolated hardware and predictable performance for security tooling and research.</p>
+  <ul>
+    <li>Small Host — 4 vCPU / 16GB RAM / 500GB NVMe — $179/mo</li>
+    <li>Medium Host — 8 vCPU / 32GB RAM / 1TB NVMe — $335/mo</li>
+    <li>Large Host — 16 vCPU / 64GB RAM / 2TB NVMe — $647/mo</li>
+  </ul>
+  <div class="meta">
+    <span class="badge" style="background:#effaf6;color:#0b8a5f">From €179/mo</span>
+    <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px;">
+      <a class="btn snipcart-add-item"
+         href="#"
+         data-item-id="dh-small"
+         data-item-name="Dedicated Host - Small"
+         data-item-price="179"
+         data-item-url="https://thqcyberdivision.github.io/services.html"
+         data-item-description="Small single-tenant host, 4 vCPU, 16GB RAM, 500GB NVMe">
+        Rent Small Host
+      </a>
+      <a class="btn snipcart-add-item"
+         href="#"
+         data-item-id="dh-medium"
+         data-item-name="Dedicated Host - Medium"
+         data-item-price="335"
+         data-item-url="https://thqcyberdivision.github.io/services.html"
+         data-item-description="Medium single-tenant host, 8 vCPU, 32GB RAM, 1TB NVMe">
+        Rent Medium Host
+      </a>
+      <a class="btn snipcart-add-item"
+         href="#"
+         data-item-id="dh-large"
+         data-item-name="Dedicated Host - Large"
+         data-item-price="647"
+         data-item-url="https://thqcyberdivision.github.io/services.html"
+         data-item-description="Large single-tenant host, 16 vCPU, 64GB RAM, 2TB NVMe">
+        Rent Large Host
+      </a>
+    </div>
+  </div>
+</article>
 
-              <a class="btn snipcart-add-item" href="#"
-                 data-item-id="dh-medium"
-                 data-item-name="Dedicated Host - Medium"
-                 data-item-price="279.00"
-                 data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="Medium single-tenant host, 8 vCPU, 32GB RAM, 1TB NVMe">
-                Rent Medium Host
-              </a>
-
-              <a class="btn snipcart-add-item" href="#"
-                 data-item-id="dh-large"
-                 data-item-name="Dedicated Host - Large"
-                 data-item-price="539.00"
-                 data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="Large single-tenant host, 16 vCPU, 64GB RAM, 2TB NVMe">
-                Rent Large Host
-              </a>
-            </div>
-          </div>
-        </article>
 
         <!-- Dedicated Instances (replaces Backup & Disaster Recovery) -->
         <article class="card reveal" aria-labelledby="di-title">
@@ -366,37 +330,37 @@
           <h3 id="di-title">Dedicated Instances</h3>
           <p>Isolated virtualized instances on reserved hosts for short-term projects, red-team/capture-the-flag exercises, or tooling that requires dedicated compute without shared noisy neighbors.</p>
           <ul>
-            <li>Instance — 2 vCPU / 4GB / 80GB SSD — €29/mo</li>
-            <li>Instance — 4 vCPU / 8GB / 160GB SSD — €59/mo</li>
-            <li>High-CPU Instance — 8 vCPU / 16GB / 320GB SSD — €119/mo</li>
+            <li>Instance — 2 vCPU / 4GB / 80GB SSD — $145/mo</li>
+            <li>Instance — 4 vCPU / 8GB / 160GB SSD — $290/mo</li>
+            <li>High-CPU Instance — 8 vCPU / 16GB / 320GB SSD — $637.73/mo</li>
           </ul>
           <div class="meta">
-            <span class="badge" style="background:#effaf6;color:#0b8a5f">From €29/mo</span>
+            <span class="badge" style="background:#effaf6;color:#0b8a5f">From $145/mo</span>
             <div style="display:flex;gap:8px;flex-wrap:wrap;margin-top:10px;">
               <a class="btn snipcart-add-item" href="#"
                  data-item-id="di-2v"
-                 data-item-name="Dedicated Instance - 2 vCPU"
-                 data-item-price="29.00"
+                 data-item-name="Dedicated Instance - 4 vCPU"
+                 data-item-price="145"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="2 vCPU, 4GB RAM, 80GB SSD — isolated instance on reserved host">
+                 data-item-description="4 vCPU, 16 GiB RAM, 1 x 150 NVMe SSD — isolated instance on reserved host">
                 Rent 2 vCPU Instance
               </a>
 
               <a class="btn snipcart-add-item" href="#"
                  data-item-id="di-4v"
-                 data-item-name="Dedicated Instance - 4 vCPU"
-                 data-item-price="59.00"
+                 data-item-name="Dedicated Instance - 8 vCPU"
+                 data-item-price="290"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="4 vCPU, 8GB RAM, 160GB SSD — isolated instance on reserved host">
+                 data-item-description="8 vCPU, 32 GiB RAM, 1 x 300 NVMe SSD — isolated instance on reserved host">
                 Rent 4 vCPU Instance
               </a>
 
               <a class="btn snipcart-add-item" href="#"
                  data-item-id="di-8v"
-                 data-item-name="Dedicated Instance - 8 vCPU"
-                 data-item-price="119.00"
+                 data-item-name="Dedicated Instance -16 vCPU"
+                 data-item-price="637.73"
                  data-item-url="https://thqcyberdivision.github.io/services.html"
-                 data-item-description="8 vCPU, 16GB RAM, 320GB SSD — isolated instance on reserved host">
+                 data-item-description="16 vCPU, 64 GiB RAM, 2 x 300 NVMe SSD — isolated instance on reserved host">
                 Rent 8 vCPU Instance
               </a>
             </div>
